2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'DeviceType' stat to the audio device statistics.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'Connector::hostHostname()', 'Connector::hostPort()' and
	'Connector::setError()' methods in 'src/common/connector.cpp' and
	'src/common/connector.h'.
	* Fixed a bug in 'src/glassplayer/conn_xcast.cpp' that generated a
	malformed HTTP request.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Codec::writePcm()' method in 'src/common/codec.cpp' and
	'src/common/codec.h'.
	* Removed the 'Codec::signalAudioWritten()' method in
	'src/common/codec.cpp' and 'src/common/codec.h'.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'hostname' and 'port' parameters from the
	'Connector::connectToHostConnector()' method in
	'src/common/connector.cpp' and 'src/common/connector.h'.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'File' connector in 'src/glassplayer/conn_file.cpp' and
	'src/glassplayer/conn_file.h'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Enabled playout of local files.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a Passthrough codec in 'src/glassplayer/codec_pass.cpp' and
	'src/glassplayer/codec_pass.h'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added 'audio/x-wav', 'audio/wav', 'audio/wave', 'audio/vnd.wave',
	'audio/aiff', 'audio/x-aiff', 'audio/basic', 'audio/x-au',
	'audio/voc', 'audio/x-voc', 'audio/x-adpcm', 'audio/x-flac' and
	'application/ogg' mimetypes for the Passthrough codec in
	'src/common/codec.cpp'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glasscoder/glasscoder.cpp' where the
	descructors would fail to be executed upon reception of a SIGINT
	or SIGTERM signal.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added '|' character to separate the source and parameter name
	fields in statistics data.