@@ -776,6 +776,35 @@
 </blockquote>
 </refsect1>
 
+<refsect1 id='configuration'><title>Configuration</title>
+<para>
+  <command>glassplayer</command>
+  <manvolnum>1</manvolnum> reads its startup options from one or more
+  of the following locations, with values from locations
+  read earlier taking precedence over those read later:
+</para>
+  <variablelist>
+    <varlistentry>
+      <term>
+	command line
+      </term>
+    </varlistentry>
+  </variablelist>
+  <variablelist>
+    <varlistentry>
+      <term>
+	<filename>$HOME/.glassplayerrc</filename>
+      </term>
+    </varlistentry>
+  </variablelist>
+  <variablelist>
+    <varlistentry>
+      <term>
+	<filename>/etc/glassplayer.conf</filename>
+      </term>
+    </varlistentry>
+  </variablelist>
+</refsect1>
 
 <refsect1 id='author'><title>Author</title>
 <para>
